# slide-talker-backend

./: .Dockerfile.swp  .env  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  log.txt  todo
logfile/: 2023-07-13.txt
logfiles/: 2023-07-29.txt  2023-07-30.txt  2023-07-31.txt
src/: api.rs  controller.rs  database.rs  db.rs  logger.rs  main.rs  model.rs  timer.rs  utils.rs  video.rs  worker.rs
src/model/: constant.rs  email.rs  subtitle.rs  task.rs  video.rs  worker.rs
src/tests/: api_test.rs  common.rs  database_test.rs  mod.rs  timer_test.rs
src/video/: api.rs  model.rs
