[package]
name = "slide_talker_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {versino = "=0.5.0-rc.3", features = ["json"]}
serde = "1.0.160"
serde_derive = "1.0.160"
serde_json = "1.0.96"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
ffmpeg-next = "6.0.0"
lettre = "0.10"
validator = { version = "0.12", features = ["derive"] }
log = "0.4"
env_logger = "0.10"